bug-fix overflow

--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,13 @@
 }
 
 .hero-container {
-    width: 100%;
+    min-width: 100%;
     max-height: 700px;
     position: absolute;
 }
 
 .hero-image {
-    width: 100%;
+    min-width: 100%;
     max-height: 700px;
     position: relative;
     overflow: hidden;
@@ -31,7 +31,6 @@
     display: inline-flex;
     justify-content: space-around;
     padding: 5px 10px;
-    min-width: 415px;
     position: relative;
 }
 
